--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #b61b15;
+    background-color: #ff4949;
     height: 100px;
     color: white;
     font-size: 22px;
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     font-size: 32px;
+    padding: 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
