--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,11 +8,9 @@
     position: sticky;
     top: 0;
     z-index: 10;
-}
-
-.logo {
     color: white;
 }
+
 
 .menu {
     display: flex;
@@ -33,6 +31,13 @@
     text-decoration: none;
     color: white;
 }
+
+.span {
+    padding: 0px 5px;
+    cursor: pointer;
+    font-size: 30px;
+}
+
 
 .listItem a:hover {
     border-bottom: 2px solid white;
