--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -63,6 +63,21 @@
     color: white;
 }
 
+.numberOfItem {
+    display: inline-block;
+    color: green;
+    font-size: 18px;
+    background-color: white;
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+    text-align: center;
+    position: relative;
+    top: -18px;
+    left: -10px;
+
+}
+
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
 
