--- a/styles/ShoppingCart.module.css
+++ b/styles/ShoppingCart.module.css
@@ -1,7 +1,7 @@
 .popup {
     position: absolute;
     width: 480px;
-    height: 100vh;
+    height: 80vh;
     top: 100%;
     left: 60%;
     background-color: white;
@@ -12,4 +12,48 @@
 
 .openPopup {
     display: block;
+}
+
+.item {
+    display: flex;
+    color: black;
+    justify-content: space-around;
+    border: 1px solid black;
+    margin: 10px;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.quantity {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: black;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    font-size: 18px;
+    border: 1px solid gray;
+    cursor: pointer;
+}
+
+.button {
+    background-color: rgba(255, 0, 0, 0.809);
+    color: white;
+    outline-style: none;
+    border: none;
+    font-size: 14px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    position: absolute;
+    bottom: 0px;
+    left: 37%;
 }
